--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "verify": "npx hardhat verify --network goerli YOURADDRESS",
+    "test": "hardhat test",
+    "rx": "remixd -s . --remix-ide https://remix.ethereum.org",
+    "clean": "rm -rf .deps && rm -rf artifacts && rm -rf cache",
+    "test-node": "npx hardhat node --fork https://eth-mainnet.g.alchemy.com/v2/${API_KEY}",
+    "compile": "hardhat compile",
+    "build:types": "hardhat typechain"
   },
   "repository": {
     "type": "git",
@@ -17,7 +23,31 @@
   },
   "homepage": "https://github.com/0x171-0/Beanstalk-REKT#readme",
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.5",
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.12.3"
+    "@nomiclabs/hardhat-ethers": "^2.2.1",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.3",
+    "i": "^0.3.7",
+    "npm": "^9.1.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
+    "@nomiclabs/hardhat-etherscan": "^3.1.3",
+    "@openzeppelin/contracts": "^4.8.0",
+    "@typechain/ethers-v5": "^10.1.1",
+    "@typechain/hardhat": "^6.1.4",
+    "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "@uniswap/v3-periphery": "^1.4.3",
+    "chai": "^4.3.7",
+    "dotenv": "^16.0.3",
+    "hardhat-ethers": "^1.0.1",
+    "hardhat-gas-reporter": "^1.0.9",
+    "solidity-coverage": "^0.8.2",
+    "typechain": "^8.1.1"
   }
 }
