--- a/package.json
+++ b/package.json
@@ -30,12 +30,8 @@
     "@types/mocha": "^10.0.1",
     "ethers": "^5.7.2",
     "hardhat": "^2.12.3",
-    "i": "^0.3.7",
-    "npm": "^9.1.3",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
-  },
-  "dependencies": {
+    "typescript": "^4.9.3",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.7",
     "@nomiclabs/hardhat-etherscan": "^3.1.3",
     "@typechain/ethers-v5": "^10.1.1",
